# buck2-change-detector

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/: dotslash-config.json
.github/actions/publish_tag/: action.yml
.github/workflows/: ci.yml  release_btd.yml
audit/: Cargo.toml  README.md
audit/src/: lib.rs
btd/: Cargo.toml  README.md
btd/if/: btd_run_stats.thrift
btd/src/: changes.rs  check.rs  diff.rs  filter.rs  glean.rs  graph_size.rs  lib.rs  output.rs  rerun.rs  sudo.rs
btd/src/buck/: cells.rs  config.rs  glob.rs  ignore_set.rs  labels.rs  mod.rs  package_resolver.rs  run.rs  target_map.rs  targets.rs  types.rs
btd/src/sapling/: mod.rs  status.rs
btd/test/: buckconfig.patch  cfg_modifiers.patch  change_package_value.patch  delete_inner.patch  file.patch  new_buck.patch  new_ignored.patch  new_outside_universe.patch  nothing.patch  rename_inner.patch  run_buck.bat  run_buck.sh  test_e2e.py
btd/test/base/: .buckconfig.test  src0.txt
btd/test/base/inner/: BUCK.v2.test  PACKAGE.test  src2.txt
supertd/: Cargo.toml  README.md  fetch_supertd_fbpkg  invoke_supertd
targets/: Cargo.toml  README.md
targets/src/: lib.rs
td_util/: Cargo.toml
td_util/src/: btd_graph_cache.rs  cli.rs  command.rs  directives.rs  executor.rs  file_io.rs  file_writer.rs  git.rs  json.rs  knobs.rs  lib.rs  logging.rs  no_hash.rs  prelude.rs  project.rs  qe.rs  sapling.rs  schedules.rs  string.rs  supertd_events.rs  supertd_events_logger.rs  tracing.rs  vcs.rs  workflow_error.rs  workflow_result.rs  xplat.rs  zstd.rs
td_util/src/buck/: Cargo.toml  config.rs  deserializers.rs  flattened_select.rs  glob.rs  invalidation_patterns.rs  labels.rs  lib.rs  run.rs  select.rs  target_graph.rs  targets.rs  tented.rs  types.rs
