[package]
name = "btd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "btd"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
clap = {version = "4.1.4", features = ["derive"]}
rayon = "1.7.0"
fbinit = { workspace = true }
glob = "0.3.0"
globset = "0.4.10"
itertools = "0.13.0"
parse-display = "0.8.2"
regex = "1.5.4"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.66"
tempfile = "3.1.0"
thiserror = "1.0.36"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

audit = {path = "../audit"}
td_util = {path = "../td_util"}
td_util_buck = {path = "../td_util/src/buck"}
targets = {path = "../targets"}
