[package]
name = "supertd"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "supertd"
path = "bin/main.rs"

[dependencies]
anyhow = "1.0"
clap = {version = "4.1.4", features = ["derive"]}
tokio = { version = "1.37", features = ["full"] }
fbinit = { workspace = true }
fbinit-tokio = { workspace = true }

td_util = {path = "../td_util"}
audit = {path = "../audit"}
btd = {path = "../btd"}
targets = {path = "../targets"}
