[package]
name = "td_util"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
argfile = "0.1.5"
clap = {version = "4.1.4"}
equivalent = "1.0.0"
fbinit = { workspace = true }
lazy_static = "1.4.0"
static_interner.version = "0.1"
# @oss-disable: static_interner.path = "../../buck2/shed/static_interner"
static_interner.default-features = false
scuba = { workspace = true }
parse-display = "0.8.2"
rayon = "1.6.1"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0.66"
tempfile = "3.1.0"
tracing = "0.1.22"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zstd = "0.12.3"
